--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,45 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
-	font-size: 6.25%;
-}
-
-@media (max-width: 1490px) {
-	html {
-		font-size: 5.2%;
-	}
-}
-@media (max-width: 1060px) {
-	html {
-		font-size: 4.5%;
-	}
-}
-@media (max-width: 768px) {
-	html {
-		font-size: 4%;
-	}
-}
-
-@media (max-width: 400px) {
-	html {
-		font-size: 3%;
-	}
-}
-@media (max-width: 200px) {
-	html {
-		font-size: 2.5%;
-	}
-}
-
 .button {
 	position: absolute;
 	top: 0;
 	right: 0;
-	width: 100rem;
-	height: 40rem;
+	width: 100px;
+	height: 40px;
 	cursor: pointer;
-	border-radius: 25rem;
+	border-radius: 25px;
 	overflow: hidden;
 }
 
@@ -96,7 +65,7 @@ html {
 	transition: all 0.75s cubic-bezier(0.76, 0, 0.24, 1);
 	pointer-events: none;
 	text-transform: uppercase;
-	font-size: 16rem;
+	font-size: 16px;
 }
 
 .perspectiveText p:nth-of-type(2) {
