--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+	src: url("../fonts/trial-sans.otf");
+	font-family: TrialSans;
+}
+
 .button {
 	position: absolute;
 	top: 0;
